Fixes small layout bug on the faculty page, Adds the More page links to another pages, changes the theme layout.

--- a/src/pages/faculty/faculty.scss
+++ b/src/pages/faculty/faculty.scss
@@ -17,7 +17,7 @@ page-faculty {
 		overflow: hidden;
 
 		&.active {
-			height: 352px !important;
+			height: auto !important;
 		}
 
 		img {
