--- a/src/theme/green-themes.scss
+++ b/src/theme/green-themes.scss
@@ -77,7 +77,7 @@ $palettes: (
       primary : #ffffff, // Used for header animation, list item, background ionic app, header-section, google card-background-color, swipe, tabs-background, toggle, item-divider-background, toolbar-background, alert
       secondary : #f7f7f7, // Used for search-bar
       secondaryDark: #C7C7CC, //Used for item-divider, header-section,
-      accent : #21E7B6, // Used for button, badges, checkbox, wizard, radio, toggle, alert, wizard
+      accent : #06990d, // Used for button, badges, checkbox, wizard, radio, toggle, alert, wizard
       accentLight : #E8E9EA, //
       accentDark: #EFEFF4 //Used for badge
     ),
@@ -88,7 +88,7 @@ $palettes: (
       secondaryDark: #EFEFF4,
       secondaryBase: #ffffff, // Used for button, badge, parallax-title, parallax-subtitle, gallery-title, gallery-subtitle, checkbox, search-bar-title
       accentLight: #C7C7CC, //Used for icon, span-large
-      accent : #21E7B6, // Used for icon, span-medium, button, login-title, badge, wizard-title, wizard-subtitle, toolbar, alert
+      accent : #06990d, // Used for icon, span-medium, button, login-title, badge, wizard-title, wizard-subtitle, toolbar, alert
       accentDark: #000000 // Used for header-title, item-title, subitem-title, login-subtitle, card-title, tabs, maps-title, maps-description-title
     ),
     // Used for blend modes
